--- a/src/app/App.css
+++ b/src/app/App.css
@@ -133,7 +133,7 @@ th {
     background-color: #f9f9f9;
 }
 
-.add-food-form {
+.add-food-form, .add-recipe-form {
     display: flex;
     flex-grow: 2; /* Add flexibility to the form */
     margin-right: 20px; /* Adjust right margin for spacing */
