First minor refactor of Journal.js
Closes #35

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -10,6 +10,11 @@ button:hover {
     background-color: #ddd;
 }
 
+button:disabled {
+    background-color: gray;
+    cursor: not-allowed;
+}
+
 input[type="text"], input[type="number"], select, textarea {
     padding: 10px;
     font-size: 16px;
