Created AddEntry Header
Added Foods & Recipes buttons inside table

Created Foods & Recipes Modals

Added the buttons and inputs for the modals (no functionalities yet)

Added fetch for insulinTypes

Closes #37,
Closes #38,
Closes #39,
Closes #40

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -143,7 +143,7 @@ th {
     background-color: #f9f9f9;
 }
 
-.add-food-form, .add-recipe-form {
+.add-food-form, .add-recipe-form, .add-journal-entry-form {
     display: flex;
     flex-grow: 2; /* Add flexibility to the form */
     margin-right: 20px; /* Adjust right margin for spacing */
