--- a/src/app/App.css
+++ b/src/app/App.css
@@ -265,3 +265,8 @@ th.description, td.description {
     background-color: #a5d6a7;
 }
 
+.button:disabled {
+    background-color: gray;
+    cursor: not-allowed;
+}
+
