--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,3 +1,8 @@
+.page-content {
+    margin-left: 100px; /* Match the width of the sidebar */
+    padding: 20px; /* Optional padding for inner spacing */
+}
+
 /* General styles */
 button {
     padding: 5px 10px;
@@ -47,40 +52,6 @@ th {
 
 .modal-content {
     padding: 20px;
-}
-
-/* Navbar styles */
-.navbar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #333;
-    color: white;
-    padding: 10px;
-}
-
-.nav-buttons {
-    display: flex;
-}
-
-.nav-button {
-    width: 100px;
-    height: 30px;
-    padding: 10px;
-
-    display: inline-block;
-    margin: 0 10px;
-    background-color: white;
-    color: black;
-    text-align: center;
-    text-decoration: none;
-    font-size: 20px;
-    border-radius: 10px;
-}
-
-.nav-button:hover {
-    background-color: red;
-    transition: 1s ease;
 }
 
 /* Header styles */
