--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -31,7 +31,7 @@
     position: fixed;
     top: 0;
     left: -250px; /* Initially hidden */
-    width: 280px;
+    width: 250px;
     height: 100%;
     background-color: #333;
     color: white;
@@ -67,6 +67,7 @@
     border-radius: 5px;
     text-align: center;
     transition: background-color 0.3s ease;
+    cursor: pointer;
 }
 
 .sidebar .nav-button:hover {
