renamed plus card add new food functionality updated useModals

--- a/src/components/cards/FoodCard.css
+++ b/src/components/cards/FoodCard.css
@@ -26,6 +26,7 @@
     border: 2px solid white;
     padding: 5px;
     border-radius: 4px;
+    height: 45px;
 }
 
 .food-card-header .editable-input {
