--- a/src/components/cards/PlusCard.css
+++ b/src/components/cards/PlusCard.css
@@ -1,4 +1,4 @@
-.empty-food-card {
+.plus-card {
     display: flex;
     justify-content: center; /* Horizontally center */
     align-items: center; /* Vertically center */
@@ -17,18 +17,18 @@
     cursor: pointer;
 }
 
+.plus-card:hover {
+    transform: scale(1.05); /* Slightly enlarge on hover */
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.5); /* Enhance shadow on hover */
+}
+
+.plus-card:hover .plus-icon {
+    transform: scale(1.2); /* Slight zoom on hover */
+}
+
 .plus-icon {
     font-size: 50px;
     color: white;
     text-shadow: 0 4px 10px rgba(255, 255, 255, 0.8);
     transition: transform 0.2s ease-in-out;
-}
-
-.empty-food-card:hover {
-    transform: scale(1.05); /* Slightly enlarge on hover */
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.5); /* Enhance shadow on hover */
-}
-
-.empty-food-card:hover .plus-icon {
-    transform: scale(1.2); /* Slight zoom on hover */
 }
