--- a/src/components/misc/Pagination.css
+++ b/src/components/misc/Pagination.css
@@ -1,7 +1,7 @@
 .pagination {
     display: flex;
     justify-content: center;
-    margin: 20px 0;
+    margin: 0;
     gap: 10px; /* Add space between buttons */
 }
 
