--- a/src/components/pages/Recipe.css
+++ b/src/components/pages/Recipe.css
@@ -20,6 +20,7 @@
 }
 
 .stats-bar {
+    width: 95%;
     display: flex;
     padding: 10px;
     justify-content: space-between;
@@ -69,6 +70,16 @@
     background-color: green;
     color: white;
     cursor: pointer;
+}
+
+.foods-header {
+    display: flex;
+    /*flex-direction: column; !* Stack items vertically *!*/
+    justify-content: center; /* Center items vertically */
+    align-items: center; /* Center items horizontally */
+    gap: 20px; /* Add spacing between the elements */
+    height: 50px; /* Optional: Adjust the height for proper centering */
+    margin: 0; /* Center the header horizontally in the container */
 }
 
 @media (max-width: 768px) {
