--- a/src/components/modal/SaveChanges.css
+++ b/src/components/modal/SaveChanges.css
@@ -3,6 +3,7 @@
     background-color: black;
     color: white;
     padding: 20px;
+    border: 1px solid white;
     border-radius: 8px;
     text-align: center;
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
